--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" id="file-upload" version="2.4">
-  <servlet>
-    <servlet-name>UploadFileServletOne</servlet-name>
-    <servlet-class>com.requirement.one.UploadServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>UploadFileServletTwo</servlet-name>
-    <servlet-class>com.requirement.two.UploadServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ProgressServletTwo</servlet-name>
-    <servlet-class>com.requirement.two.ProgressServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>UploadFileServletFour</servlet-name>
-    <servlet-class>com.requirement.four.UploadServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ProgressServletFour</servlet-name>
-    <servlet-class>com.requirement.four.ProgressServlet</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>UploadFileServletOne</servlet-name>
-    <url-pattern>/UploadServletOne</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>UploadFileServletTwo</servlet-name>
-    <url-pattern>/UploadServletTwo</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ProgressServletTwo</servlet-name>
-    <url-pattern>/ProgressServletTwo</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>UploadFileServletFour</servlet-name>
-    <url-pattern>/UploadServletFour</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ProgressServletFour</servlet-name>
-    <url-pattern>/ProgressServletFour</url-pattern>
-  </servlet-mapping>
-
-  <welcome-file-list>
-    <welcome-file>POC_-_UploadFile/requirement-01/noProgressSync.html</welcome-file>
-  </welcome-file-list>
-</web-app>
+<web:web-app xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xmlns="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+  <web:servlet>
+    <web:servlet-name>UploadFileServletOne</web:servlet-name>
+    <web:servlet-class>com.requirement.one.UploadServlet</web:servlet-class>
+  </web:servlet>
+  <web:servlet>
+    <web:servlet-name>UploadFileServletTwo</web:servlet-name>
+    <web:servlet-class>com.requirement.two.UploadServlet</web:servlet-class>
+  </web:servlet>
+  <web:servlet>
+    <web:servlet-name>ProgressServletTwo</web:servlet-name>
+    <web:servlet-class>com.requirement.two.ProgressServlet</web:servlet-class>
+  </web:servlet>
+  <web:servlet>
+    <web:servlet-name>UploadFileServletFour</web:servlet-name>
+    <web:servlet-class>com.requirement.four.UploadServlet</web:servlet-class>
+  </web:servlet>
+  <web:servlet>
+    <web:servlet-name>ProgressServletFour</web:servlet-name>
+    <web:servlet-class>com.requirement.four.ProgressServlet</web:servlet-class>
+  </web:servlet>
+  <web:servlet-mapping>
+    <web:servlet-name>UploadFileServletOne</web:servlet-name>
+    <web:url-pattern>/UploadServletOne</web:url-pattern>
+  </web:servlet-mapping>
+  <web:servlet-mapping>
+    <web:servlet-name>UploadFileServletTwo</web:servlet-name>
+    <web:url-pattern>/UploadServletTwo</web:url-pattern>
+  </web:servlet-mapping>
+  <web:servlet-mapping>
+    <web:servlet-name>ProgressServletTwo</web:servlet-name>
+    <web:url-pattern>/ProgressServletTwo</web:url-pattern>
+  </web:servlet-mapping>
+  <web:servlet-mapping>
+    <web:servlet-name>UploadFileServletFour</web:servlet-name>
+    <web:url-pattern>/UploadServletFour</web:url-pattern>
+  </web:servlet-mapping>
+  <web:servlet-mapping>
+    <web:servlet-name>ProgressServletFour</web:servlet-name>
+    <web:url-pattern>/ProgressServletFour</web:url-pattern>
+  </web:servlet-mapping>
+  <web:welcome-file-list>
+    <web:welcome-file>/POC_-_UploadFile/requirement-01/noProgressSync.html</web:welcome-file>
+  </web:welcome-file-list>
+</web:web-app>
