--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>POC - UploadFile</name>
+	<name>Java-POC - UploadFile</name>
 	<comment></comment>
 	<projects>
 	</projects>
